--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "ngx-stop-propagation",
-  "version": "0.0.0",
+  "version": "1.0.1",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "ng test --single-run",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "build:lib": "gulp --gulpfile gulpfile.lib.js",
@@ -47,13 +47,14 @@
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
+    "karma-chrome-launcher": "^2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "path": "^0.12.7",
     "protractor": "~5.1.2",
+    "puppeteer": "^1.0.0",
     "rimraf": "^2.6.2",
     "rollup": "^0.54.0",
     "run-sequence": "^2.2.1",
